# skill-builder

./: .gitignore  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-02-PLAN.md  01-VALIDATION.md
.planning/phases/02-research-engine/: 02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-output-pipeline/: 03-01-PLAN.md  03-01-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-integration-wiring/: 04-01-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/: exa-tavily-firecrawl.json
src/skill_builder/: __init__.py  budget.py  checkpoint.py  cli.py  conductor.py  progress.py  resilience.py  tracing.py
tests/: conftest.py  test_budget.py  test_checkpoint.py  test_cli.py  test_conductor.py  test_dedup.py  test_documenter_agent.py  test_evaluators.py  test_exa_strategy.py  test_firecrawl_strategy.py  test_gap_analyzer_agent.py  test_harvest_agent.py  test_harvest_router.py  test_learner_agent.py  test_live_agents.py  test_live_anthropic.py  test_live_conductor.py  test_live_strategies.py  test_mapper_agent.py  test_models.py  test_organizer_agent.py  test_packager_agent.py  test_progress.py  test_query_generator.py  test_resilience.py  test_saturation.py  test_smoke_apis.py  test_tavily_strategy.py  test_tracing.py  test_validator_agent.py  test_version_check.py
(+65 files in other folders)
